refactor: 전체 코드를 base 코드로 교체